--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "" # the base hostname & protocol for your site
 github_repo: https://visualizela.github.io/waterLA
 
 # --COPYRIGHT-- (Date generated from last build)
-copyright_name: Andy Rutkowski, Stacy Williams
+copyright_name: Andy Rutkowski, Audra Bardsley
 license: CC BY-NC-SA 4.0
 
 # build settings
